// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlatCard should render with many props assigned 1`] = `
<article
  className="FlatCard test-class"
>
  <div
    className="borderContainer"
  >
    <h1
      className="header"
    >
      Tester Person
    </h1>
    <h6
      className="subHeader"
    >
      Leader of the Company
    </h6>
    <div
      className="rowCenter"
    >
      <img
        alt="Image Caption"
        className="image"
        src="https://s3.amazonaws.com/operationcode-assets/headshots/david_molina.jpg"
      />
    </div>
    <hr
      className="divider"
    />
    <p
      className="body"
    >
      Description of the person shown on the card.
    </p>
  </div>
</article>
`;

exports[`FlatCard should render with required props 1`] = `
<article
  className="FlatCard"
>
  <div
    className="borderContainer"
  >
    <h1
      className="header"
    >
      Tester Person
    </h1>
    <div
      className="rowCenter"
    >
      <img
        alt="Image caption"
        className="image"
        src="https://s3.amazonaws.com/operationcode-assets/headshots/david_molina.jpg"
      />
    </div>
    <hr
      className="divider"
    />
    <p
      className="body"
    />
  </div>
</article>
`;
